# ro-Assist

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  README.tr.md  build_log.txt  latest_build.txt  log_resize.patch  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  resources.qrc  ro-assist-0.1.0-Linux.rpm  ro-assist.spec  update_logic.patch
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  rpm-build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
ro-assist_autogen/: deps
ro-assist_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  qrc_resources.cpp
